--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ python-dateutil==2.9.0.post0
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
+qrcode==7.4.2
+django-rest-framework==0.1.0
+djangorestframework==3.14.0
+python-telegram-bot==20.7
